overflow hidden fix for mobile v4

--- a/src/components/ProjectManagement/Carousel.scss
+++ b/src/components/ProjectManagement/Carousel.scss
@@ -9,6 +9,7 @@
   width: 90%;
   margin-top: -20%;
   overflow: hidden !important;
+  position: relative;
 
   &.mobile-version {
     margin-top: -5%;
